# soc

./: .gitignore  README.md  gibbs_sampling.py  pyproject.toml  run.py  soc.py
data/: input.tsv  output.tsv
